# fractals

./: README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
src/fractals/: __init__.py
tests/: test_fractals.py
